--- a/structurizr.properties
+++ b/structurizr.properties
@@ -1,6 +1,6 @@
 structurizr.remote.workspaceId=1
 # structurizr.autoSaveInterval=5000
 # structurizr.autoRefreshInterval=2000
-structurizr.remote.apiKey=f4efddc4-ef85-4efd-aa8b-3020ce351413
-structurizr.remote.apiSecret=470bb115-9aa6-43ec-b827-bf0058150d8c
-structurizr.remote.apiUrl=http://localhost:8081/api
+structurizr.remote.apiKey=070c391b-7bbd-4cc8-a8c2-a519d2607eaf
+structurizr.remote.apiSecret=5dec492b-2406-47e7-8bbf-0e86e98478c0
+structurizr.remote.apiUrl=http://192.168.1.82:8081/api
